...
    /**
     * Returns (ipString, prefixLength).
     * Handles:
     *   "192.168.1.0/24"
     *   "192.168.1.0/255.255.255.0"
     *   "192.168.1.0 255.255.255.0"
     *   "192.168.1.0"
     */
    private fun parseInput(input: String): Pair<String, Int> {
        val slashIndex = input.indexOf('/')
        val spaceIndex = input.indexOf(' ')

        return when {
...
